fix: adiciona axios

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-leaflet": "^3.0.0",
+    "axios": "^1.6.2",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
